fixed image button
doesn't overlap with text any more

--- a/main.css
+++ b/main.css
@@ -38,9 +38,8 @@ li {
   }
 
   .btn {
-    position: absolute;
-    top: 20px;
-    left: 150px;
+    position: relative;
+    
     height: 70px;
     width: 70px;
     border-radius: 50%;
